<resources>
    <string name="app_name">Login Page</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="hello_there_welcome_back">Hello there, Welcome Back</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="new_user_sign_up">New User? SIGN UP</string>
    <string name="go">GO</string>
    <string name="forget_password">Forget Password?</string>
    <string name="open">Open Navigation Drawer</string>
    <string name="close">close Navigation Drawer</string>
</resources>